# DuToolkit

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  deploy.sh  multi_post.sh  pyproject.toml  run_api.sh  run_py.sh  system.production.yml  system.yml  version.sh
MODELALG/: README
MODELALG/CLS/ClsCollect/ClsCollectv0/: dataset.py  lr_finder.py  make_dataloader.py  torch_utils.py  utils.py
MODELALG/RES/MPRNet/MPRNetv0/: MPRNet.py  config.py  data_RGB.py  dataset_RGB.py  losses.py
MODELALG/utils/: common.py  schema.py
MODELALG/utils/hypertxt_utils/: add_chapter.py  chapter.py  chapter_settings.py
MODELALG/utils/hypertxt_utils/chapter_tools/: add_chapter.py  generate_chapter_by_llm.py  generate_chapter_by_re.py  title_tag_by_layout.py  title_tag_by_llm.py  title_tag_by_re.py
MODELALG/utils/metric/: metric.py  parallel.py
MODELALG/utils/pdfplumber/: __init__.py  container.py  page.py  pdf.py  table.py  utils.py
MODELALG/utils/sdnlp_libs/base/: chapter.py  hypertxt.py  settings.py  trie.py  use.py
MODELALG/utils/sdnlp_libs/utils/: __init__.py  funcs.py  helpers.py  train_utils.py
WORKFLOW/CLS/ReadingCls/v0/: classifier_reading.py
WORKFLOW/CLS/TableCls/v0/: API  classifier_table.py  t_0.py  test.py  train.py
WORKFLOW/CLS/TextCls/v0/: classifier_text.py  t_0.py  test.py  train.py
WORKFLOW/DET/ChrboxDet/v0/: detector_chrbox.py
WORKFLOW/DET/FormulaDet/v0/: detector_formula.py
WORKFLOW/DET/FormulaDet/v1/: detector_formula.py
WORKFLOW/DET/LayoutDet/v0/: detector_layout.py
WORKFLOW/DET/LayoutDet/v1/: detector_layout.py  t_0.py
WORKFLOW/DET/LayoutDet/v2/: detector_layout.py
WORKFLOW/DET/SealDet/v0/: API  README.md  detector_seal.py  test.py  train.py  train_all_8000.py  train_semi.py  train_small.py  train_unlabel.py
WORKFLOW/DET/SealDet/v1/: API  detect.py  detector_seal.py  t_0.py  test.py  train.py
WORKFLOW/DET/SealDet/v2/: detector_seal.py  test.py  train_semi.py
WORKFLOW/DET/SealTextDet/v0/: API  detector_seal_text.py  test.py  train.py
WORKFLOW/DET/TableCellContentDet/v1/: API  detector_table_cell_content.py  test.py  train.py
WORKFLOW/DET/TableCellDet/v0/: API  detector_table_cell.py  table_cell_det_merge_demo.py  table_cell_postprocess.py
WORKFLOW/DET/TableCellDet/v1/: detector_table_cell.py  test.py  train.py
WORKFLOW/DET/TableDet/v0/: API  detector_table.py  test.py
WORKFLOW/DET/TableDet/v1/: detector_table.py  t_0.py  test.py  train.py
WORKFLOW/DET/TextDet/v0/: README.md  t_0.py  (+6 more)
WORKFLOW/OTHER/: README.md
WORKFLOW/OTHER/torchocr/: __init__.py  torch_utils.py  utility.py
base-image/: Dockerfile  build.sh  readme
base-image/conf/: policy.xml
conf/: .condarc  requirements.txt  resolv.conf
dockerfiles/: Dockerfile.gpu  Dockerfile.mlu  Dockerfile.npu  Dockerfile.npu.300i.310p  build_gpu.sh  build_mlu.sh  build_npu.sh
dockerfiles/src/: pooling.py  replace_pooling.py
frontend/gradio_app/: app.py  header.html
prompts/: generate_chapter_v0.txt  generate_titile_tag_prompt_v0.txt  generate_title_tag_prompt_v1.txt  universal_prompt.txt
pytest_scripts/: test_files.py
(+263 files in other folders)
